--- a/home.css
+++ b/home.css
@@ -6,7 +6,7 @@
 }
 
 *{
-    font-family: '', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin:0; padding:0;
     box-sizing: border-box;
     outline: none; border:none;
